# SteamHelper-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
crates/steam-api/: Cargo.toml
crates/steam-api/src/: TcpConnection.rs  api.rs  cmserver.rs  connection.rs  emsg.rs  encrypted_connection.rs  lib.rs  server.rs  steam_id.rs  steamclient.rs  tcpconnection.rs  webapi.rs
crates/steam-api/src/config/: mod.rs
crates/steam-api/src/handlers/: mod.rs
crates/steam-api/src/messages/: encoded_message.rs  enums.rs  headers.rs  message.rs  mod.rs  packetmessage.rs
crates/steam-auth/: Cargo.toml  README.md
crates/steam-auth/assets/: api_ok.html  multi_confirmation.html  sample.maFile
crates/steam-auth/src/: client.rs  confirmations.rs  errors.rs  lib.rs  page_scraper.rs  responses.rs  retry.rs  scraper.rs  types.rs  utils.rs
crates/steam-auth/src/web_handler/: confirmation.rs  login.rs  mod.rs  trade.rs
crates/steam-client/: Cargo.toml
crates/steam-client/src/: client.rs  cmserver.rs  connection.rs  content_manager.rs  encrypted_connection.rs  errors.rs  identifiers.rs  lib.rs  steamclient.rs  utils.rs  webapi.rs
crates/steam-client/src/config/: mod.rs
crates/steam-client/src/connection/: encryption.rs  mod.rs
crates/steam-client/src/handlers/: async_messages.rs  dispatcher.rs  mod.rs  steam_client.rs  steam_friends.rs  steam_user.rs
crates/steam-client/src/messages/: codec.rs  encoded.rs  message.rs  mod.rs  packet.rs  packetmessage.rs
crates/steam-crypto/: Cargo.toml
crates/steam-crypto/src/: lib.rs
crates/steam-crypto/src/symm/: mod.rs
crates/steam-language-gen/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  TODO.org
crates/steam-language-gen-derive/: CHANGELOG.md  Cargo.toml
crates/steam-language-gen-derive/src/: lib.rs
crates/steam-language-gen/src/: file.rs  generate.rs  generator.rs  lib.rs  parser.rs
crates/steam-mobile/: CHANGELOG.md  Cargo.toml  README.md
crates/steam-mobile/assets/: empty_confirmation.html  multi_confirmation.html
crates/steam-mobile/src/: adapter.rs  client.rs  errors.rs  lib.rs  page_scraper.rs  types.rs  user.rs  utils.rs
crates/steam-mobile/src/web_handler/: api_key.rs  confirmation.rs  login.rs  mod.rs
crates/steam-protobuf/: CHANGELOG.md  Cargo.toml  build.rs
crates/steam-protobuf/src/: error.rs  lib.rs  main.rs  protobuf_message.rs  regen.rs
crates/steam-protobuf/src/google/: protobuf.rs
crates/steam-protobuf/src/protobufs/: clientmetrics.rs  content_manifest.rs  contenthubs.rs  encrypted_app_ticket.rs  enums.rs  enums_clientserver.rs  enums_productinfo.rs  htmlmessages.rs  mod.rs  offline_ticket.rs  steamdatagram_messages_auth.rs  steamdatagram_messages_sdr.rs  steammessages_accounthardware_steamclient.rs  steammessages_appoverview.rs  steammessages_auth_steamclient.rs  steammessages_base.rs  steammessages_broadcast_steamclient.rs  steammessages_chat_steamclient.rs  steammessages_client_objects.rs  steammessages_clientlanp2p.rs  steammessages_clientmetrics_steamclient.rs  steammessages_clientnotificationtypes.rs  steammessages_clientserver.rs  steammessages_clientserver_2.rs  steammessages_clientserver_appinfo.rs  steammessages_clientserver_friends.rs  steammessages_clientserver_gameservers.rs  steammessages_clientserver_lbs.rs  steammessages_clientserver_login.rs  steammessages_clientserver_mms.rs  steammessages_clientserver_ucm.rs  steammessages_clientserver_uds.rs  steammessages_clientserver_ufs.rs  steammessages_clientserver_userstats.rs  steammessages_clientsettings.rs  steammessages_cloud_steamclient.rs  steammessages_contentsystem_steamclient.rs  steammessages_credentials_steamclient.rs  steammessages_datapublisher_steamclient.rs  steammessages_depotbuilder_steamclient.rs  (+57 more)
crates/steam-protobuf/src/steam/: clientmetrics.rs  content_manifest.rs  encrypted_app_ticket.rs  enums.rs  enums_clientserver.rs  htmlmessages.rs  mod.rs  renderer.rs  steamdatagram_messages_auth.rs  steamdatagram_messages_sdr.rs  steammessages_accounthardware_steamclient.rs  steammessages_appoverview.rs  steammessages_auth_steamclient.rs  steammessages_base.rs  steammessages_broadcast_steamclient.rs  steammessages_chat_steamclient.rs  steammessages_clientlanp2p.rs  steammessages_clientmetrics_steamclient.rs  steammessages_clientserver.rs  steammessages_clientserver_2.rs  steammessages_clientserver_friends.rs  steammessages_clientserver_login.rs  steammessages_cloud_steamclient.rs  steammessages_contentsystem_steamclient.rs  steammessages_credentials_steamclient.rs  steammessages_datapublisher_steamclient.rs  steammessages_depotbuilder_steamclient.rs  steammessages_deviceauth_steamclient.rs  steammessages_econ_steamclient.rs  steammessages_friendmessages_steamclient.rs  steammessages_gamenotifications_steamclient.rs  steammessages_gameservers_steamclient.rs  steammessages_hiddevices.rs  steammessages_inventory_steamclient.rs  steammessages_linkfilter_steamclient.rs  steammessages_lobbymatchmaking_steamclient.rs  steammessages_market_steamclient.rs  steammessages_offline_steamclient.rs  steammessages_parental_steamclient.rs  (+28 more)
crates/steam-totp/: CHANGELOG.md  Cargo.toml
crates/steam-totp/src/: error.rs  lib.rs  secret.rs  steam_api.rs  time.rs
crates/steam-trading/: CHANGELOG.md  Cargo.toml  README.md  todo.org
crates/steam-trading/src/: additional_checks.rs  api_extensions.rs  errors.rs  lib.rs  time.rs
crates/steam-web-api/: .#README.md  Cargo.toml  README.md
crates/steam-web-api-derive/: Cargo.toml
crates/steam-web-api-derive/src/: lib.rs
crates/steam-web-api/src/: helpers.rs  lib.rs  macros.rs  response_types.rs  trading_types.rs
crates/steam-web-api/tests/: main.rs
crates/steamid-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/steamid-parser/src/: lib.rs
crates/tappet/: CHANGELOG.md  Cargo.toml  README.md
crates/tappet-derive/: CHANGELOG.md  Cargo.toml
crates/tappet/src/: errors.rs  lib.rs  macros.rs  response_types.rs  trading_types.rs
crates/tappet/tests/: main.rs
crates/valve-sdk13-rng/: Cargo.toml  README.md
crates/valve-sdk13-rng/src/: lib.rs
docs/dev/: README.md
(+29 files in other folders)
