[workspace]
members = ["crates/*"]
resolver = "2"

# local crates
[workspace.dependencies]
steam-language-gen = { path = "./crates/steam-language-gen", version = "0.1.3" }
steam-mobile = { path = "./crates/steam-mobile", version = "0.4.0", default-features = false }
steam-protobuf = { path = "./crates/steam-protobuf", version = "0.2.0" }
steamid-parser = { path = "./crates/steamid-parser", version = "0.2.1" }
tappet = { path = "./crates/tappet", version = "0.5.0" }
tappet-derive = { path = "./crates/tappet-derive", version = "0.3.2" }

base64 = "^0.21"
bytes = "^1"
const_format = "^0.2"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
rand = "^0.8"
reqwest = { version = "^0.11", features = ["cookies", "multipart"] }
regex = "^1"
futures = "^0.3"
futures-util = "^0.3"
futures-timer = "^3"
parking_lot = "^0.12"
strum = "0.25"
strum_macros = "0.25"

erased-serde = "^0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "^0"