[package]
name = "steam-api"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steam-protobuf = { path = "../steam-protobuf" }
steam-crypto = { path = "../steam-crypto" }
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.41"
bytes = "0.4.12"

# futures
tokio = "0.2.0-alpha.6"
async-trait = "0.1.16"

# emsg parsing
enum_primitive = "*"
num = "0.2.0"

[dependencies.reqwest]
version = "0.10.0-alpha.1"
features = [ "blocking", "json" ]
