[package]
name = "steam-api"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.41"
serde_repr = "0.1.5"

bytes = "0.4.12"
byteorder = "1.3.2"
bincode = "1.2.0"
protobuf = "2.8.1"

# futures
tokio = "0.2.0-alpha.6"
async-trait = "0.1.16"

# emsg parsing
enum_primitive = "*"
num = "0.2.0"
arrayref = "0.3.5"

[dependencies.reqwest]
version = "0.10.0-alpha.1"
features = [ "blocking", "json" ]

[dependencies.steam-protobuf]
path = "../steam-protobuf"

[dependencies.steam-crypto]
path = "../steam-crypto"

