[package]
name = "steam-auth"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-auth/"
homepage = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-auth/"
readme = "README.md"
license = "MIT"
edition = "2018"

[features]
default = ["cli"]

# This feature is used only if we want a CLI.
cli = ["clap"]

[dependencies]
base64 = "0.12.0"
bytes = "0.5"
chrono = "0.4.11"
const-concat = { git = "https://github.com/reesmanp/const-concat", branch = "master" }
cookie = { git = "https://github.com/saskenuba/cookie-rs", branch = "master" }
futures = "0.3.5"
hex = "0.4"
itertools = "0.9"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.7"
rsa = "0.2"
scraper = "0.11.0"
serde = "1"
serde_derive = "1.0.111"
serde_json = "1.0.53"
serde_repr = "0.1.5"
serde_with = { version =  "1.4.0", features = ["json"] }
tracing = "0.1"
tracing-futures = "0.2.3"
tracing-subscriber = "0.2.4" # For testing
thiserror = "1.0.20"
tokio = { version = "0.2.16", features = ["rt-core", "macros", "time"] }
uuid = { version = "0.8.1", features = ["v4"] }

# Clap 3.0
[dependencies.clap]
version = "3.0.0-beta.1"
optional = true

[dependencies.steam-totp]
path = "../steam-totp"

[dependencies.steam-crypto]
path = "../steam-crypto"

[dependencies.steam-language-gen]
path = "../steam-language-gen"

[dependencies.steamid-parser]
path = "../steamid-parser"

[dependencies.reqwest]
version = "0.10"
features = ["json", "cookies", "gzip"]