[package]
name = "steam-auth"
version = "0.2.2"
authors = ["Martin <martin@hotmail.com.br>"]
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-auth/"
homepage = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-auth/"
readme = "README.md"
license = "MIT"
edition = "2018"

[features]
default = ["cli"]

# This feature is used only if we want a CLI.
cli = ["clap", "dialoguer", "anyhow", "tokio/fs"]

[dependencies]
anyhow = { version = "1", optional = true }
dialoguer = { version = "0.7.1", optional = true }
backoff = { version = "0.2", features = ["tokio"] }
base64 = "0.13"
bytes = "0.6"
chrono = "0.4"
const_format = "^0.2"
cookie = { git = "https://github.com/saskenuba/cookie-rs", branch = "master" }
futures = "^0.3"
pin-project = "1" # Required because of conflicts
hex = "0.4"
itertools = "0.9"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.7"
rsa = "0.3"
scraper = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1.5"
serde_with = { version = "1.5", features = ["json"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2" # For testing
thiserror = "1.0.20"
tokio = { version = "1.0.0", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "0.8.1", features = ["v4"] }

strum = "0.19.5"
strum_macros = "0.19.4"

# Clap 3.0
[dependencies.clap]
version = "3.0.0-beta.2"
optional = true

[dependencies.steam-totp]
path = "../steam-totp"

[dependencies.steam-crypto]
path = "../steam-crypto"

[dependencies.steam-language-gen]
path = "../steam-language-gen"

[dependencies.steamid-parser]
path = "../steamid-parser"

[dependencies.reqwest]
version = "0.11"
features = ["json", "cookies", "gzip"]