[package]
name = "steam-auth"
version = "0.2.3"
authors = ["Martin <martin@hotmail.com.br>"]
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-auth/"
homepage = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-auth/"
readme = "README.md"
license = "MIT"
edition = "2018"

[features]
default = ["cli"]

# This feature is used only if we want a CLI.
cli = ["clap", "dialoguer", "anyhow", "tokio"]

[dependencies]
base64 = "0.13"
bytes = "0.6"
chrono = "0.4"
const_format = "^0.2"
cookie = { git = "https://github.com/saskenuba/cookie-rs", branch = "master" }
hex = "0.4"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.7"
rsa = "0.3"
reqwest = { version = "^0.11", features = ["json"] }
scraper = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1.5"
serde_with = { version = "1.5", features = ["json"] }
tracing = "0.1"
tracing-futures = "0.2"
thiserror = "1.0.20"
uuid = { version = "0.8.1", features = ["v4"] }

backoff = { version = "0.3.0", features = ["tokio", "futures"] }
futures = "^0.3"
futures-util = "0.3.15"
futures-timer = "^3"

strum_macros = "0.21"

anyhow = { version = "1", optional = true }
dialoguer = { version = "^0.8", optional = true }
tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros", "fs"], optional = true }

# Clap 3.0
[dependencies.clap]
version = "3.0.0-beta.2"
optional = true

[dependencies.steam-totp]
version = "^0.2"
path = "../steam-totp"

[dependencies.steam-language-gen]
version = "^0.1"
path = "../steam-language-gen"

[dependencies.steamid-parser]
path = "../steamid-parser"

[dev-dependencies]
tokio = { version = "^1.0.2", features = ["rt", "macros"] }
tracing-subscriber = "0.2"
