[package]
name = "steam-client"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
publish = false

[features]
default = []

# Optional Websockets connection to Steam Servers
websockets = ["tokio-tungstenite"]

[dependencies]

anyhow = "^1.0"
arrayref = "^0.3"
async-trait = "^0.1"
atomic = "^0.5"
bincode = "^1"
byteorder = "1"
bytes = "^1.0"
derive-new = "0.5.8"
erased-serde = "^0.3"
futures = "^0.3"
lazy_static = "1"
log = "^0.4"
num = "^0.3"
regex = "^1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1"
serde_repr = "^0"
thiserror = "^1.0"

# futures
tokio = { version = "^1.1", features = ["net", "rt", "macros"] }
tokio-util = { version = "^0.6", features = ["codec"] }
tokio-tungstenite = { version = "^0.13", optional = true }
tokio-compat-02 = "0.2.0"


# Web API calls
[dependencies.reqwest]
version = "^0.11"
features = ["json", "blocking"]

# Internal Dependencies
[dependencies.steam-protobuf]
path = "../steam-protobuf"

[dependencies.steam-crypto]
path = "../steam-crypto"

[dependencies.steam-language-gen]
path = "../steam-language-gen"

[dependencies.steam-language-gen-derive]
path = "../steam-language-gen-derive"

[dependencies.tappet]
path = "../tappet"

[dependencies.steamid-parser]
path = "../steamid-parser"

[dev-dependencies]
env_logger = { version = "*", features = ["termcolor"] }
