[package]
name = "steam-crypto"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
openssl = "0.10.25"
lazy-static-include = "2.2.2"
lazy_static = "1.4.0"
crc = "1"
crc32fast = "1"
bytes = "0.5"
byteorder = "1"
