[package]
name = "steam-language-gen-derive"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.8"
quote = "1.0.2"
