[package]
name = "steam-language-gen-derive"
version = "0.1.1"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
license = "MIT"
description = "Implementation detail of `steam-language-gen` crate."
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-language-gen-derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "^1"
proc-macro2 = "^1"
