[package]
name = "steam-language-gen"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
regex = "1"
petgraph = "0.4"
arrayref = "0.3"

#derives
num-traits = "0.2"
num-derive = "0.3"
bitflags = "1"
derive-new = "*"
downcast-rs = "1"
enum_dispatch = "0.2"

# serde
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
bincode = "1"

steam-language-gen-derive = { path = "../steam-language-gen-derive" }
steam-protobuf = { path = "../steam-protobuf" }

[dependencies.Inflector]
version = "*"
default-features = false
