[package]
name = "steam-mobile"
version = "0.2.4"
authors = ["Martin <martin@hotmail.com.br>"]
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-mobile/"
homepage = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-mobile/"
readme = "README.md"
license = "MIT"
edition = "2018"
description = "Add, remove and edit Steam 2fa codes programmaticaly, with optional CLI to generate TOTP Codes, add SteamGuard, etc."

[features]
default = ["cli"]

# This feature is used only if we want a CLI.
cli = ["clap", "dialoguer", "anyhow", "tokio"]

[dependencies]
base64 = "0.13"
bytes = "^1.1"
chrono = "0.4"
const_format = "0.2"
hex = "0.4"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.7"
rsa = "0.3"
reqwest = { version = "^0.11", features = ["cookies", "json"] }
scraper = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1.5"
serde_with = { version = "1.5", features = ["json"] }
tracing = "0.1"
tracing-futures = "0.2"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

backoff = { version = "0.3.0", features = ["tokio", "futures"] }
futures = "^0.3"
futures-util = "0.3.15"
futures-timer = "^3"

strum = "0.21"
strum_macros = "0.21"

anyhow = { version = "1", optional = true }
clap = { version = "3.1.18", optional = true }
dialoguer = { version = "0.10", optional = true }
tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros", "fs"], optional = true }

[dependencies.cookie]
version = "0.16.0-rc.1"
package = "cookie-hashed-domain"

[dependencies.steam-totp]
version = "^0.2"
path = "../steam-totp"

[dependencies.steam-language-gen]
version = "^0.1"
path = "../steam-language-gen"

[dependencies.steamid-parser]
version = "^0.2"
path = "../steamid-parser"

[dev-dependencies]
tokio = { version = "^1.0.2", features = ["rt", "macros"] }
tracing-subscriber = "0.2"
