[package]
name = "steam-mobile"
version = "0.3.1"
authors = ["Martin <martin@hotmail.com.br>"]
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-mobile/"
homepage = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-mobile/"
readme = "README.md"
license = "MIT"
edition = "2018"
description = "Add, remove and edit Steam 2fa codes programmaticaly, with optional CLI to generate TOTP Codes, add SteamGuard, etc."

[features]
default = ["cli"]

# This feature is used only if we want a CLI.
cli = ["clap", "dialoguer", "anyhow", "tokio"]

[dependencies]
base64 = "0.13"
bytes = "^1.1"
chrono = "0.4"
hex = "0.4"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "^0"
reqwest = { version = "^0.11", features = ["cookies", "json"] }
rsa = "0.7"
scraper = "0.18"
serde_with = { version = "1.5", features = ["json"] }
thiserror = "1"
tracing = "0.1"
tracing-futures = "0.2"
uuid = { version = "1", features = ["v4"] }

backoff = { version = "0.4", features = ["tokio", "futures"] }

const_format.workspace = true
futures-timer.workspace = true
futures-util.workspace = true
futures.workspace = true
rand.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_repr.workspace = true

strum = "0.21"
strum_macros = "0.21"

anyhow = { version = "1", optional = true }
clap = { version = "3.1.18", optional = true }
dialoguer = { version = "0.10", optional = true }
tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros", "fs"], optional = true }

[dependencies.cookie]
version = "0.16.0-rc.1"
package = "cookie-hashed-domain"

[dependencies.steam-totp]
version = "^0.2"
path = "../steam-totp"

[dependencies.steam-language-gen]
version = "^0.1"
path = "../steam-language-gen"

[dependencies.steamid-parser]
version = "^0.2"
path = "../steamid-parser"

[dev-dependencies]
tokio = { version = "^1.0.2", features = ["rt", "macros"] }
tracing-subscriber = "0.2"
