[package]
name = "steam-mobile"
version = "0.4.0"
authors = ["Martin <martin@hotmail.com.br>"]
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-mobile/"
homepage = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-mobile/"
readme = "README.md"
license = "MIT"
edition = "2018"
description = "Add, remove and edit Steam 2fa codes programmaticaly, with optional CLI to generate TOTP Codes, add SteamGuard, etc."

[features]
default = ["cli"]

# This feature is used only if we want a CLI.
cli = ["clap", "dialoguer", "anyhow", "tokio"]

[dependencies]
backoff = { version = "0.4", features = ["tokio", "futures"] }
hex = "0.4"
parking_lot = "^0"
rsa = "0.9"
scraper = "0.18"
serde_with = { version = "^3", features = [] }
downcast-rs = { version = "^1" }
thiserror = "1"
tracing = "0.1"
tracing-futures = "0.2"
uuid = { version = "1", features = ["v4"] }

base64.workspace = true
bytes.workspace = true
const_format.workspace = true
derive_more.workspace = true
futures-timer.workspace = true
futures-util.workspace = true
futures.workspace = true
rand.workspace = true
reqwest.workspace = true

serde_urlencoded = "^0"
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
strum.workspace = true
strum_macros.workspace = true

anyhow = { version = "1", optional = true }
clap = { version = "3.1.18", optional = true }
dialoguer = { version = "0.10", optional = true }
tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros", "fs"], optional = true }

steam-protobuf.workspace = true
steam-language-gen.workspace = true

[dependencies.cookie]
version = "0.16.0-rc.1"
package = "cookie-hashed-domain"

[dependencies.steam-totp]
version = "^0.2"
path = "../steam-totp"

[dependencies.steamid-parser]
version = "^0.2"
path = "../steamid-parser"

[dev-dependencies]
tokio = { version = "^1", features = ["rt", "macros"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
