[package]
name = "steam-protobuf"
version = "0.1.1"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-protobuf"
description = "Generated Steam protobuf definitions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with-serde"]
with-serde = []

[dependencies]
walkdir = "2.3.1"
glob = "0.3.0"
serde = { version = "^1", features = ["derive"] }
protobuf = { version = "2.20.0", features = ["with-bytes", "with-serde"] }
protoc-rust = { version = "2.20.0" }

