[package]
name = "steam-protobuf"
version = "0.1.2"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-protobuf"
description = "Generated Steam protobuf definitions"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with-serde"]
with-serde = []

[build-dependencies]
walkdir = "^2"
glob = "^0"
serde = { version = "^1", features = ["derive"] }
protobuf = { version = "^3", features = ["with-bytes"] }
protobuf-codegen = { version = "3.3.0" }
protoc-bin-vendored = "^3"
protoc-rust = "^2"

