[package]
name = "steam-protobuf"
version = "0.2.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-protobuf"
description = "Rust definitions of Steam Protocol Buffers."

[features]
default = []
regen = ["walkdir", "glob", "protobuf-codegen", "protoc-bin-vendored", "protoc-rust"]

[dependencies]
bytes = "^1"
thiserror = "^1"
protobuf = { version = "^3", features = ["with-bytes"] }
protobuf-json-mapping = "^3"

glob = { version = "^0", optional = true }
walkdir = { version = "^2", optional = true }
protobuf-codegen = { version = "3.3.0", optional = true }
protoc-bin-vendored = { version = "^3", optional = true }
protoc-rust = { version = "^2", optional = true }