[package]
name = "steam-trading"
version = "0.2.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
time = ["chrono"]

[dependencies]
chrono = { version = "0.4", optional = true }
const_format = "^0.2"
erased-serde = "^0.3"
futures = "^0.3"
serde = "1"
serde_json = "^1"
serde_repr = "0.1.6"
serde_with = { version = "^1.4", features = ["json"] }
thiserror = "1"
tokio = { version = "^0.2", features = ["rt-core", "macros", "time"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2" # For testing

[dependencies.steam-language-gen]
path = "../steam-language-gen"

[dependencies.steam-auth]
path = "../steam-auth"
default-features = false

[dependencies.steamid-parser]
path = "../steamid-parser"

[dependencies.steam-web-api]
path = "../steam-web-api"