[package]
name = "steam-trading"
version = "0.5.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-trading/"
homepage = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-trading/"
readme = "README.md"
license = "MIT"
description = "Create, accept and deny trade offers without your mobile device."
keywords = ["steam", "tradeoffer", "trading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["additional-checks"]

additional-checks = ["scraper"]
time = ["chrono"]

[dependencies]
chrono = { version = "0.4", optional = true }
const_format = "^0.2"
erased-serde = "^0.3"
lazy_static = "^1"
regex = "^1"
serde = "1"
serde_json = "^1"
serde_repr = "0.1.6"
serde_with = { version = "^1.9", features = ["json"] }
thiserror = "1"
tracing = "^0.1"
tracing-futures = "^0.2"
scraper = { version = "^0.12", optional = true }

futures = "^0.3"
futures-timer = "^3"

steam-mobile = { workspace = true, default-features = false }
steamid-parser.workspace = true
tappet.workspace = true

[dependencies.steam-language-gen]
version = "^0.1"
path = "../steam-language-gen"

[dev-dependencies]
tokio = { version = "^1.0.2", features = ["rt", "macros"] }
tracing-subscriber = "0.2"
