[package]
name = "steam-trading"
version = "0.6.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-trading/"
homepage = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-trading/"
readme = "README.md"
license = "MIT"
description = "Create, accept and deny trade offers without your mobile device."
keywords = ["steam", "tradeoffer", "trading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["additional-checks"]

additional-checks = ["scraper"]
time = ["chrono"]

[dependencies]
const_format = "^0.2"
erased-serde = "^0.4"
lazy_static = "^1"
regex = "^1"
thiserror = "1"
tracing = "^0.1"
tracing-futures = "^0.2"
triomphe = "^0"

chrono = { version = "0.4", optional = true }
scraper = { version = "^0", optional = true }

futures = "^0.3"
futures-timer = "^3"

parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with = { version = "^1.9", features = ["json"] }

steam-language-gen.workspace = true
steam-mobile = { workspace = true, default-features = false }
steamid-parser.workspace = true
tappet.workspace = true

[dev-dependencies]
tokio = { version = "^1", features = ["rt", "macros"] }
tracing-subscriber = "0.3"
