[package]
name = "steam-web-api"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.40"
itertools = "0.9.0"
paste = "1.0.1"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2"

[dependencies.steam-web-api-derive]
path = "../steam-web-api-derive"
