[package]
name = "steam-web-api"
version = "0.2.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

[features]
default = ["async"]

blocking = ["reqwest/blocking"]
async = ["async-trait", "futures"]

[dependencies]
async-trait = { version = "^0.1", optional = true }
futures = { version = "^0.3", optional = true }
itertools = "^0.9"
paste = "~1.0.1"
reqwest = { version = "^0.10", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
url = "^2"

[dependencies.steam-web-api-derive]
path = "../steam-web-api-derive"

[dev-dependencies]
anyhow = "1"
tokio = { version = "0.2.22", features = ["full"] }
compile-fail = { git = "https://github.com/rylev/compile-fail" }