[package]
name = "steamid-parser"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.17"
regex = "1"
lazy_static = "1"
num = "0.2"

[dependencies.steam-language-gen]
path = "../steam-language-gen"
