[package]
name = "steamid-parser"
version = "0.2.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

[features]
default = ["serialize"]
serialize = ["serde"]

[dependencies]
bitvec = "0.17"
lazy_static = "1"
num = "0.2"
regex = "1"
serde = { version = "^1", optional = true }

[dependencies.steam-language-gen]
path = "../steam-language-gen"

[dev-dependencies]
serde_json = "^1"
