[package]
name = "steamid-parser"
version = "0.2.1"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steamid-parser"
license = "MIT"
description = "Utility crate for de/serialization of various Steam IDs, such as Steam3, Steam64."

[features]
default = ["serialize"]
serialize = ["serde"]

[dependencies]
bitvec = "0.17"
lazy_static = "1"
num = "0.2"
regex = "1"
serde = { version = "^1", optional = true }

[dependencies.steam-language-gen]
version = "0.1"
path = "../steam-language-gen"

[dev-dependencies]
serde_json = "^1"
