[package]
name = "tappet-derive"
version = "0.3.1"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
description = "Implementation detail of the `tappet` crate."
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/tappet-derive"
homepage = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/tappet-derive"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
