[package]
name = "tappet"
version = "0.4.1"
authors = ["Martin <martin@hotmail.com.br>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/tappet"
homepage = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/tappet"
readme = "README.md"
description = "Strongly typed wrapper for the official Valve's Steam API."
keywords = ["steam", "api"]

[features]
default = ["async", "trading"]

async = ["async-trait", "futures"]
blocking = ["reqwest/blocking"]
trading = ["serde_repr", "serde_with"]

[dependencies]
cfg-if = "^1.0"
paste = "~1.0.1"
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1.0"
url = "^2"

async-trait = { version = "^0.1", optional = true }
futures = { version = "^0.3", optional = true }

serde_repr = { version = "^0.1", optional = true }
serde_with = { version = "^1.4", features = ["json"], optional = true }

[dependencies.tappet-derive]
path = "../tappet-derive"
version = "0.3.1"

[dependencies.steam-language-gen]
path = "../steam-language-gen"
version = "0.1.0"

[dev-dependencies]
anyhow = "1"
tokio = { version = "^1.0.2", features = ["full"] }
compile-fail = { git = "https://github.com/rylev/compile-fail" }