[package]
name = "valve-sdk13-rng"
version = "0.1.0"
edition = "2018"
authors = ["Martin <martin@hotmail.com.br>"]
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/valve-sdk13-rng"
license = "MIT"
description = "A port of Valve's SDK13 Uniform random number generator in Rust."


[dependencies]
